[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netsci-toolkit"
version = "0.1.0"
description = "A tiny network-science toolkit (degree-preserving randomization, betweenness, cores, log-binning)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name="Peiwen Liu"}]
dependencies = [
  "networkx>=3.0",
  "numpy>=1.22",
  "scipy>=1.8",
]

[project.urls]
Homepage = "https://github.com/<your-username>/netsci_toolkit"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
